submit leetcode 2997;